--- a/src/styles/CardList.scss
+++ b/src/styles/CardList.scss
@@ -4,6 +4,7 @@
 	$border-color: #111;
 	$border-color-hover: rgb(0, 99, 255);
 	$border-color-selected: rgb(0, 255, 99);
+	$border-color-updated: rgb(255, 165, 0);
 	$transition-speed: 0.07s;
 
 	height: 100%;
@@ -60,6 +61,11 @@
 
 	.card.selected {
 		border-left: solid $border-color-selected 3px;
+		transition: border-width $transition-speed linear;
+	}
+
+	.card.updated:not(.selected) {
+		border-left: solid $border-color-updated 3px;
 		transition: border-width $transition-speed linear;
 	}
 
