--- a/src/styles/CardList.scss
+++ b/src/styles/CardList.scss
@@ -5,7 +5,7 @@
 	$border-color-hover: rgb(0, 99, 255);
 	$border-color-selected: rgb(0, 255, 99);
 	$border-color-updated: rgb(255, 165, 0);
-	$transition-speed: 0.07s;
+	$transition-speed: 0.15s;
 
 	height: 100%;
 	overflow-y: hidden;
@@ -52,11 +52,26 @@
 			background-image: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
 			height: 100%;
 		}
+
+		.delete {
+			float: right;
+			position: relative;
+			right: 0.5em;
+			height: 1em;
+			top: calc(50% - 0.5em);
+			color: rgba(255, 255, 255, 0);
+			transition: color $transition-speed linear;
+		}
 	}
 
 	.card:hover {
 		border-left: solid $border-color-hover 3px;
 		transition: border-width $transition-speed linear;
+
+		.delete {
+			color: red;
+			transition: color $transition-speed linear;
+		}
 	}
 
 	.card.selected {
