--- a/src/styles/List.scss
+++ b/src/styles/List.scss
@@ -1,7 +1,6 @@
 .List {
 
 	$text-color: white;
-	$border-color: #111;
 	$border-color-hover: rgb(0, 99, 255);
 	$border-color-selected: rgb(0, 255, 99);
 	$border-color-updated: rgb(255, 165, 0);
@@ -19,16 +18,10 @@
 	}
 
 	.list-item {
-		margin-bottom: 0.5em;
-		border-top: solid $border-color 1px;
-		border-bottom: solid $border-color 1px;
-
 		border-left: solid black 0;
 		transition: border-width $transition-speed linear;
 
-		height: 4em;
 		color: $text-color;
-		text-shadow: rgba(255, 255, 255, 0.4) 0 0 15px, black 0 0 3px, black 0 0 1px;
 
 		h2 {
 			color: $text-color;
@@ -47,7 +40,6 @@
 		.content {
 			padding-left: 0.5em;
 			padding-bottom: 0.5em;
-			background-image: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
 			height: 100%;
 		}
 
@@ -95,5 +87,23 @@
 
 	button.new:active {
 		background-color: #bbb;
+	}
+}
+
+.List.card-list {
+	$border-color: #111;
+
+	.list-item {
+		margin-bottom: 0.5em;
+		height: 4em;
+
+		text-shadow: rgba(255, 255, 255, 0.4) 0 0 15px, black 0 0 3px, black 0 0 1px;
+
+		border-top: solid $border-color 1px;
+		border-bottom: solid $border-color 1px;
+	}
+
+	.content {
+		background-image: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
 	}
 }
