--- a/src/styles/CardEditor.scss
+++ b/src/styles/CardEditor.scss
@@ -4,16 +4,19 @@
 	padding-top: 1em;
 	padding-bottom: 1em;
 
-	.column {
+	.panel {
 		height: 100%;
 		padding: 2em;
 		padding-top: 1em;
+		float: left;
+		width: auto;
 	}
 
-	.left {
+	.card-preview {
 		border-right: solid #ccc 1px;
 	}
 
-	.right {
+	.Form {
+		width: 100%;
 	}
 }
