--- a/src/styles/Card.scss
+++ b/src/styles/Card.scss
@@ -14,7 +14,10 @@
 		transform: translate(-50%, -50%);
 	}
 
-	.description span {
-		width: 100%;
+	.description {
+		span {
+			width: 100%;
+		}
+		white-space: pre-line;
 	}
 }
