--- a/src/styles/List.scss
+++ b/src/styles/List.scss
@@ -1,10 +1,4 @@
 .List {
-
-	$border-color-hover: rgb(0, 99, 255);
-	$border-color-selected: rgb(0, 255, 99);
-	$border-color-updated: rgb(255, 165, 0);
-	$transition-speed: 0.15s;
-
 	height: 100%;
 	overflow-y: hidden;
 	display: flex;
@@ -15,60 +9,6 @@
 		overflow-y: auto;
 		height: 100%;
 	}
-
-	.list-item {
-		border-left: solid black 0;
-		transition: border-width $transition-speed linear;
-
-		overflow: hidden;
-		text-overflow: ellipsis;
-		white-space: nowrap;
-
-		.content {
-			padding-left: 0.5em;
-			padding-bottom: 0.5em;
-			height: 100%;
-		}
-
-		.list-item-button {
-			float: right;
-			position: relative;
-			z-index: 10;
-			right: 0.5em;
-			height: 1em;
-			top: calc(50% - 0.5em);
-			color: rgba(255, 255, 255, 0);
-			transition: color $transition-speed linear;
-		}
-
-		.list-item-button.edit {
-			right: 0.7em;
-		}
-	}
-
-	.list-item:hover {
-		border-left: solid $border-color-hover 3px;
-		transition: border-width $transition-speed linear;
-
-		.list-item-button {
-			color: red;
-			transition: color $transition-speed linear;
-		}
-
-		.list-item-button.edit {
-			color: black;
-		}
-	}
-
-	.list-item.selected {
-		border-left: solid $border-color-selected 3px;
-		transition: border-width $transition-speed linear;
-	}
-
-	.list-item.updated:not(.selected) {
-		border-left: solid $border-color-updated 3px;
-		transition: border-width $transition-speed linear;
-	}
 }
 
 .List.card-list {
@@ -76,7 +16,7 @@
 	$border-color: #111;
 	$text-color: white;
 
-	.list-item {
+	.Item {
 		margin-bottom: 0.5em;
 		height: 4em;
 
@@ -110,7 +50,7 @@
 
 	max-height: 400px;
 
-	.list-item {
+	.Item {
 		height: $item-height;
 		margin-bottom: 0.5em;
 
@@ -121,7 +61,7 @@
 }
 
 .List.effect-list {
-	.list-item:hover {
+	.Item:hover {
 		font-weight: bold;
 	}
 }
